# amazon-echo-server

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  dev_backend_config  dev_config  example_config  new_dev_config  new_example_config  new_local_dev_config  simple_config
cmake/: FindSQLite3.cmake
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: bad_request_handler.h  config_parser.h  config_parser_exception.h  database.h  echo_handler.h  handler.h  handler_manager.h  health_check_handler.h  html_builder.h  logging.h  meme.h  meme_handler.h  not_found_handler.h  reply.h  request.h  response.h  reverse_proxy_handler.h  server.h  session.h  sleep_handler.h  static_handler.h  status_handler.h
src/: bad_request_handler.cc  config_parser.cc  config_parser_exception.cc  database.cc  echo_handler.cc  handler.cc  handler_manager.cc  health_check_handler.cc  html_builder.cc  logging.cc  meme_handler.cc  not_found_handler.cc  reply.cc  request.cc  response.cc  reverse_proxy_handler.cc  server.cc  server_main.cc  session.cc  sleep_handler.cc  static_handler.cc  status_handler.cc
static/: index.html
static/memes/: edit.html  index.html  new.html  show.html
static/memes/assets/: _meme.html
static/memes/assets/stylesheets/: main.css
static/memes/partials/: _meme.html
tests/: config_parser_test.cc  echo_handler_test.cc  example_config  health_check_handler_test.cc  html_builder_test.cc  integration_test.sh  new_example_config  not_found_handler_test.cc  reply_test.cc  request_test.cc  response_test.cc  reverse_proxy_handler_test.cc  session_test.cc  status_handler_test.cc
tests/html/: after1.html  after2.html  after3.html  after4.html  before.html  before2.html  before3.html  before4.html
tests/html/integration/: integration_test_index_1.html  integration_test_index_2.html  integration_test_index_empty.html  integration_test_index_found.html  integration_test_index_not_found.html
tests/html/partials/: _meme.html
www/data/: index.html  static2.txt
